--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
     -->
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <link rel="stylesheet" href="https://js.arcgis.com/4.25/esri/themes/light/main.css">
+  <link rel="stylesheet" href="bootstrap-multiselect.css" type="text/css" />
 
   <!--
       Notice the use of %PUBLIC_URL% in the tags above.
